<?xml version="1.0"?>
<package format="2">
  <name>monkeywrench</name>

  <version>0.0.9</version>
  <description>throw a monkeywrench in your robot code</description>
  <maintainer email="chris@cthierauf.com">cst0 (Chris Thierauf)</maintainer>
  <license>Apache2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export>
  </export>
</package>
